# resume-tailor

./: .example.env  README.md  pyproject.toml
output/: complete_guide.md  guide_outline.json
src/: config.py
src/resume_tailor/: app.py  requirements.txt  setup.py
src/resume_tailor/components/: docx_builder.py  job_search.py  markdown_builder.py  profile_builder.py
src/resume_tailor/crews/: crewai_logic.py
src/resume_tailor/crews/profile_builder_crew/: profile_builder_crew.py
src/resume_tailor/crews/profile_builder_crew/config/: agents.yaml  tasks.yaml
src/resume_tailor/tools/: pdf_extractor.py
src/resume_tailor/ui/: sidebar.py  stepper.py
src/resume_tailor/utils/: utils.py
