[project]
name = "resume_tailor"
version = "0.1.0"
description = "resume_tailor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "html2docx>=1.6.0",
    "markdown>=3.8",
    "pymupdf>=1.26.0",
    "pypandoc>=1.15",
    "streamlit>=1.45.1",
    "weasyprint>=65.1",
]

[project.scripts]
kickoff = "resume_tailor.main:kickoff"
run_crew = "resume_tailor.main:kickoff"
plot = "resume_tailor.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
